[project]
name = "LetraAppFlet"
version = "1.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cristian Aguirre", email = "aguirrecristian0004@gmail.com" }
]
dependencies = [
    "flet>=0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
org = "com.dev_ca"
product = "LetraAppFlet"
company = "Dev-CA"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
